# kamusm-zd-rs

./: .gitignore  Cargo.toml  README.md  README_EN.md
src/: main.rs
