[package]
name = "kamusm-zd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hmac = "0.12"
rand = "0.8"
yasna = "0.5"
num-bigint = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
memchr = "2.5"
regex = "1.10"
